--- a/config.example.yaml
+++ b/config.example.yaml
@@ -36,3 +36,23 @@ report:
 
 # Logging directory
 log_dir: ./logs
+
+# RAG test configuration
+#  retrieve_endpoint: /retrieve
+#  ingest_endpoint: /ingest
+rag:
+  tests_path: ./use_cases/rag_tests.json
+  service_url: http://localhost:8000
+  query_endpoint: /query
+  endpoint_mode: query
+  mutator:
+    enabled: true
+    provider_type: ollama
+    model: prompt-mutator
+    base_url: http://localhost:11434/api/chat
+    temperature: 0.7
+    top_p: 0.9
+    timeout: 600
+    max_iterations: 20
+    plateau_window: 10
+    plateau_tolerance: 0.01
