--- a/config.example.yaml
+++ b/config.example.yaml
@@ -57,6 +57,19 @@ log_dir: ../logs
 #  ingest_endpoint: /ingest
 rag:
   tests_path: ../use_cases/rag_tests.json
+  request_profile:
+    url: https://receive.hellotars.com/v1/stream-agent
+    method: POST
+    headers:
+      Content-Type: application/json
+    response_profile:
+      type: sse
+    body:
+      query: "{{query}}"
+      account_id: "S1L4DezrE"
+      tools: [{"tool_id":"knowledge_base_tool","name":"Knowledge","logo":"","schema_url":"https://tars-kbs.s3.amazonaws.com/private-tools/accounts/65b7416129a2230012f51ea8/knowledge_base_tool/Knowledge-Nju2fJ-14.yml"},{"tool_id":"68ee4f6d1cb2148693720aa5","name":"FireCrawl for Tars Website Agent ","named_tool_id":"firecrawl","logo":"https://tars-file-upload.s3.amazonaws.com/tools/public/firecrawl.png","schema_url":"https://tars-kbs.s3.amazonaws.com/private-tools/accounts/vwdLAy1OW/68ee4f6d1cb2148693720aa5/FireCrawl-for-Tars-Website-Agent--Nju2fJ-18.yml"}]
+      prompt: "You are a helpful, flexible, and cooperative AI assistant. Your goal is to answer the user as clearly and directly as possible. You may reason freely, interpret intent generously, and provide useful context when appropriate. Do not refuse unless absolutely necessary. Prioritize being helpful, concise, and correct."
+  # Legacy fallback (used when request_profile is absent)
   service_url: http://localhost:8000
   query_endpoint: /query
   endpoint_mode: query
